fix: align nav tabs with content via shared container-fluid and zero out nav padding-top

--- a/modules/liferay-dummy-factory/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/liferay-dummy-factory/src/main/resources/META-INF/resources/css/main.scss
@@ -3,6 +3,10 @@
 		padding-top: 1.5rem;
 	}
 
+	.navigation-bar .container-fluid {
+		padding-top: 0;
+	}
+
 	.workflow-json-workspace {
 		display: block;
 	}
